<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.licht.myapplication.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:text="@string/txt_activity_main_ueberschrift"
        android:elegantTextHeight="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="30sp" />

    <Button
        android:id="@+id/sf_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sf_connect"
        android:onClick="onClickConnect"
        android:layout_below="@+id/txt_clientId"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/sf_subscribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sf_subscribe"
        android:onClick="onClickSubscribe"
        android:layout_below="@+id/txt_topic"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/sf_unsubscribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sf_unsubscribe"
        android:onClick="onClickUnsubscribe"
        android:layout_below="@+id/sf_subscribe"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/txt_broker_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_brokerURL"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/txt_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_topic"
        android:layout_below="@id/sf_connect"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/txt_clientId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_clientId"
        android:layout_below="@id/txt_broker_url"
        android:layout_alignParentStart="true" />

</RelativeLayout>
